Agregué pagina FANS

--- a/html/fans.html
+++ b/html/fans.html
@@ -68,7 +68,7 @@
                         <a class="nav-link" href="galeria.html">GALERIA</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="fans.html">GALERIA</a>
+                        <a class="nav-link" href="galeria.html">GALERIA</a>
                     </li>
 
                 </ul>
@@ -76,24 +76,12 @@
         </nav>
         </header>
         
-        <main class="main-galeria">
+        <main class="main-fans">
 
-            <div class="row">
-                <div class="column">
-                    <div class="grid-container">
-                        <div class="foto1"><img src="../img/1.jpg" alt="Mi BANNER" class="img-fluid"></div>
-                        <div class="foto3"><img src="../img/3.jpg" alt="Mi BANNER" class="img-fluid"></div>
-                        <div class="foto2"><img src="../img/2.jpeg" alt="Mi BANNER" class="img-fluid"></div>
-                        <div class="foto4"><img src="../img/4.jpg" alt="Mi BANNER" class="img-fluid"></div>
-                        <div class="foto5"><img src="../img/5.jpg" alt="Mi BANNER" class="img-fluid"></div>
-                        <div class="foto6"><img src="../img/6.jpg" alt="Mi BANNER" class="img-fluid"></div>
-                        <div class="foto7"><img src="../img/7.jpg" alt="Mi BANNER" class="img-fluid"></div>
-                        <div class="foto8"><img src="../img/8.jpg" alt="Mi BANNER" class="img-fluid"></div>
-                        <div class="foto9"><img src="../img/9.jpg" alt="Mi BANNER" class="img-fluid"></div>
-                        <div class="foto10"><img src="../img/10.jpg" alt="Mi BANNER" class="img-fluid"></div>
-                    
-                    </div>
-                </div>
+            <div class="foro">
+                <h1 class="h1-foro">F O R O</h1>
+
+
             </div>
 
 
