--- a/html/tours.html
+++ b/html/tours.html
@@ -32,6 +32,7 @@
                             <li><a href="tours.html" target="blank">TOURS</a></li>
                             <li><a href="merch.html" target="blank">MERCHANDISING</a></li>
                             <li><a href="galeria.html" target="blank">GALERIA</a></li>
+                            <li><a href="fans.html" target="blank">FANS</a></li>
                         </ul>
                     </article>
                 </div>
@@ -66,6 +67,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="galeria.html">GALERIA</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="fans.html">GALERIA</a>
                     </li>
 
                 </ul>
