--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </head>
     <body>
 
-        <header>
+        <header id="subir">
             <div class="conteiner banr">
                 <div class="row">
                     <section class="col-xs-12 col-md-12  col-sm-12">
@@ -34,6 +34,7 @@
                             <li><a href="html/tours.html" target="blank">TOURS</a></li>
                             <li><a href="html/merch.html" target="blank">MERCHANDISING</a></li>
                             <li><a href="html/galeria.html" target="blank">GALERIA</a></li>
+                            <li><a href="html/fans.html" target="blank">FANS</a></li>
                         </ul>
                     </article>
                 </div>
@@ -56,18 +57,23 @@
                     </li>
                     
                     <li class="nav-item">
-                        <a class="nav-link" href="albums.html">ALBUMS</a>
+                        <a class="nav-link" href="html/albums.html">ALBUMS</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="tours.html">TOURS</a>
+                        <a class="nav-link" href="html/tours.html">TOURS</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="merch.html">MERCHANDISING</a>
+                        <a class="nav-link" href="html/merch.html">MERCHANDISING</a>
                     </li>
+
                     <li class="nav-item">
-                        <a class="nav-link" href="galeria.html">GALERIA</a>
+                        <a class="nav-link" href="html/galeria.html">GALERIA</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="html/fans.html">FANS</a>
                     </li>
 
                 </ul>
@@ -96,22 +102,22 @@
 
             <section class="conteiner miembros">
                 <div class="row">
-                        <article class="col-xs-12 col-md-3">
+                        <article class="col-md-3 col-sm-12">
                             <img class="wow animate__animated animate__fadeInDown" src="img/murdoc.png" alt="Murdoc" class="img-fluid">
                             <p class="p_miemb"><strong>Murdoc Niccals</strong><br>(6 de junio de 1966) es un personaje ficticio, bajista, creador y líder absoluto de la banda virtual Gorillaz. Fue creado por Jamie Hewlett y Damon Albarn. </p>
                         </article>
 
-                        <article class="col-xs-12 col-md-3">
+                        <article class="col-md-3 col-sm-12">
                             <img class="wow animate__animated animate__fadeInDown" src="img/2D.png" alt="2D" class="img-fluid">
                             <p class="p_miemb"><strong>Harold Pot ("2-D")</strong><br>(Crawley, Reino Unido, 23 de mayo de 1978) es un personaje ficticio y vocalista principal de la banda virtual, Gorillaz. Fue creado por Damon Albarn y Jamie Hewlett. De carácter amable pero muy torpe, inocente y distraído. </p>
                         </article>
 
-                        <article class="col-xs-12 col-md-3">
+                        <article class="col-md-3 col-sm-12">
                             <img class="wow animate__animated animate__fadeInDown" src="img/noodle.png" alt="Noodle" class="img-fluid">
                             <p class="p_miemb"><strong>Noddle</strong><br>(31 de octubre de 1990) es un personaje ficticio y guitarrista de la banda virtual Gorillaz. Fue creada por Jamie Hewlett y Damon Albarn. Llegó a la banda siendo una niña muy pequeña sin recordar nada de su pasado, y obtuvo el puesto por ser una excelente guitarrista.</p>
                         </article>
 
-                        <article class="col-xs-12 col-md-3">
+                        <article class="col-md-3 col-sm-12">
                             <img class="wow animate__animated animate__fadeInDown" src="img/russel.png" alt="Russel" class="img-fluid">
                             <p class="p_miemb"><strong>Russel Hobbs</strong><br>(Nueva York, 3 de junio de 1975) es un músico ficticio estadounidense y miembro de la banda virtual Gorillaz. Expresado por Remi Kabaka Jr. Fue creado por Damon Albarn y Jamie Hewlett. </p>
                         </article>
@@ -163,6 +169,11 @@
                         </div>
                     </section>
                 </div>
+            </div>
+
+
+            <div class="boton_subir">
+                <a href="#subir"><i class="fas fa-angle-up" aria-hidden="true"></i></a>
             </div>
 
         </main>
