agregué contenido a FANS

--- a/html/fans.html
+++ b/html/fans.html
@@ -80,6 +80,15 @@
 
             <div class="foro">
                 <h1 class="h1-foro">F O R O</h1>
+                <p class="p-foro">¡Bienvenido/a!. Desde aquí podras ingresar a nuestro foto exclusivo para fans.
+                    Para eso debes ser <strong>mayor de 18 años</strong>, y seguir las reglas indicadas una vez ingresado. <br>
+                    <strong>Recuerden:</strong> <br> éste es lugar para divertirse, charlar y conocer otros fans de todas partes el mundo.
+                </p>
+                <P class="comunidad">¡SE PARTE DE LA COMUNDAD!</P>
+
+                <div>
+                    <a class="boton-foro" href="#">INGRESAR</a>
+                </div>
 
 
             </div>
