Agregué más contenido a FANS

--- a/index.html
+++ b/index.html
@@ -102,23 +102,23 @@
 
             <section class="conteiner miembros">
                 <div class="row">
-                        <article class="col-md-3 col-sm-12">
-                            <img class="wow animate__animated animate__fadeInDown" src="img/murdoc.png" alt="Murdoc" class="img-fluid">
+                        <article class="col-md-3 col-sm-12 ">
+                            <img class="wow animate__animated animate__fadeInDown cabecitas" src="img/murdoc.png" alt="Murdoc" class="img-fluid">
                             <p class="p_miemb"><strong>Murdoc Niccals</strong><br>(6 de junio de 1966) es un personaje ficticio, bajista, creador y líder absoluto de la banda virtual Gorillaz. Fue creado por Jamie Hewlett y Damon Albarn. </p>
                         </article>
 
                         <article class="col-md-3 col-sm-12">
-                            <img class="wow animate__animated animate__fadeInDown" src="img/2D.png" alt="2D" class="img-fluid">
+                            <img class="wow animate__animated animate__fadeInDown cabecitas" src="img/2D.png" alt="2D" class="img-fluid">
                             <p class="p_miemb"><strong>Harold Pot ("2-D")</strong><br>(Crawley, Reino Unido, 23 de mayo de 1978) es un personaje ficticio y vocalista principal de la banda virtual, Gorillaz. Fue creado por Damon Albarn y Jamie Hewlett. De carácter amable pero muy torpe, inocente y distraído. </p>
                         </article>
 
                         <article class="col-md-3 col-sm-12">
-                            <img class="wow animate__animated animate__fadeInDown" src="img/noodle.png" alt="Noodle" class="img-fluid">
+                            <img class="wow animate__animated animate__fadeInDown cabecitas" src="img/noodle.png" alt="Noodle" class="img-fluid">
                             <p class="p_miemb"><strong>Noddle</strong><br>(31 de octubre de 1990) es un personaje ficticio y guitarrista de la banda virtual Gorillaz. Fue creada por Jamie Hewlett y Damon Albarn. Llegó a la banda siendo una niña muy pequeña sin recordar nada de su pasado, y obtuvo el puesto por ser una excelente guitarrista.</p>
                         </article>
 
                         <article class="col-md-3 col-sm-12">
-                            <img class="wow animate__animated animate__fadeInDown" src="img/russel.png" alt="Russel" class="img-fluid">
+                            <img class="wow animate__animated animate__fadeInDown cabecitas" src="img/russel.png" alt="Russel" class="img-fluid">
                             <p class="p_miemb"><strong>Russel Hobbs</strong><br>(Nueva York, 3 de junio de 1975) es un músico ficticio estadounidense y miembro de la banda virtual Gorillaz. Expresado por Remi Kabaka Jr. Fue creado por Damon Albarn y Jamie Hewlett. </p>
                         </article>
                 </div>
@@ -133,15 +133,15 @@
                             <div class="form-group col-md-6">
                                 <label >Nombre</label>
                                 <input type="text" class="form-control col-8">
-                                <small class="form-text text-muted">Ingresa aquí tu nombre</small>
+                                <small class="form-text text-muted text-area"></small>
                             </div>
                             <div class="form-group col-md-6">
                                 <label for="exampleInputEmail1">Email</label>
-                                <input type="email" class="form-control col-8" id="exampleInputEmail1" aria-describedby="emailHelp">
+                                <input type="email" class="form-control col-8 text-area" id="exampleInputEmail1" aria-describedby="emailHelp">
                             </div>
                             <div class="form-group col-md-8">
                                 <label for="Textarea">Mensaje</label>
-                                <textarea class="form-control col-10" id="Textarea" placeholder="Escriba aquí su mensaje" required></textarea>
+                                <textarea class="form-control col-10 text-area" id="Textarea" placeholder="Escriba aquí su mensaje" required></textarea>
 
                             </div>
 
@@ -172,9 +172,6 @@
             </div>
 
 
-            <div class="boton_subir">
-                <a href="#subir"><i class="fas fa-angle-up" aria-hidden="true"></i></a>
-            </div>
 
         </main>
 
