--- a/html/albums.html
+++ b/html/albums.html
@@ -78,33 +78,51 @@
         <main class="main_albums">
             <div id="alb">
                 <section class="album1">
-                    <img src="../img/album1.jpg" alt=" A" class="img-fluid">
-                    <P>GORRILLAZ (album)</P>
+                    <img src="../img/album1.jpg" alt="Gorillaz album" class="img-fluid">
+                    <p>GORILLAZ (album) <br> 15 canciones. 5 sencillos</p>
+                    <div class="albums_boton">
+                    <a class="albums_boton_info" href="https://es.wikipedia.org/wiki/Gorillaz_(%C3%A1lbum)" target="blank">Ver más información</a>
+                    </div>
                 </section>
 
                 <section class="album2">
-                    <img src="../img/album2.jpg" class="img-fluid">
-                    <p>DEMON DAYS</p>
+                    <img src="../img/album2.jpg" alt="demon days album" class="img-fluid">
+                    <p>DEMON DAYS <br> 15 canciones. 4 sencillos</p>
+                    <div class="albums_boton">
+                        <a class="albums_boton_info" href="https://es.wikipedia.org/wiki/Demon_Days" target="blank">Ver más información</a>
+                    </div>
                 </section>
 
                 <section class="album3">
-                    <img src="../img/album3.jpg" class="img-fluid">
-                    <P>PLASTIC BEACH</P>
+                    <img src="../img/album3.jpg" alt="plastic beach album" class="img-fluid">
+                    <P>PLASTIC BEACH <br> 16 canciones. 5 sencillos</P>
+                    <div class="albums_boton">
+                        <a class="albums_boton_info" href="https://es.wikipedia.org/wiki/Plastic_Beach" target="blank">Ver más información</a>
+                    </div>
                 </section>
 
                 <section class="album4">
-                    <img src="../img/album4.jpg" class="img-fluid">
-                    <P>THE FALL</P>
+                    <img src="../img/album4.jpg" alt="the fall album" class="img-fluid">
+                    <P>THE FALL <br> 16 canciones. 5 sencillos</P>
+                    <div class="albums_boton">
+                        <a class="albums_boton_info" href="https://es.wikipedia.org/wiki/The_Fall_(%C3%A1lbum_de_Gorillaz)" target="blank">Ver más información</a>
+                    </div>
                 </section>
 
                 <section class="album5">
-                    <img src="../img/album5.jpg" class="img-fluid">
-                    <P>THE NOW NOW</P>
+                    <img src="../img/album5.jpg" alt="the now now album" class="img-fluid">
+                    <P>THE NOW NOW <br> 11 canciones. 6 sencillos</P>
+                    <div class="albums_boton">
+                        <a class="albums_boton_info" href="https://es.wikipedia.org/wiki/The_Now_Now" target="blank">Ver más información</a>
+                    </div>
                 </section>
 
                 <section class="album6">
-                    <img src="../img/album6.jpg" class="img-fluid">
-                    <P>SONG MACHINE</P>
+                    <img src="../img/album6.jpg" alt="song machine album" class="img-fluid">
+                    <P>SONG MACHINE <br> 11 canciones. 10 sencillos</P></P>
+                    <div class="albums_boton">
+                        <a class="albums_boton_info" href="https://es.wikipedia.org/wiki/Song_Machine,_Season_One:_Strange_Timez" target="blank">Ver más información</a>
+                    </div>
                 </section>
             </div>
 
@@ -120,7 +138,7 @@
                 <div class="conteiner spoty_reproductor">
                     <div class="row">
                         <section class="col-xs-12 col-md-12  col-sm-12"></section>
-                            <section class="spoty"> <iframe src="https://open.spotify.com/embed/artist/3AA28KZvwAUcZuOKwyblJQ" width="350" height="180" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe></section>
+                            <section class="spoty"> <iframe src="https://open.spotify.com/embed/artist/3AA28KZvwAUcZuOKwyblJQ" width="403" height="180" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe></section>
                         </section>
                     </div>
                 </div>
