--- a/html/tours.html
+++ b/html/tours.html
@@ -69,7 +69,7 @@
                         <a class="nav-link" href="galeria.html">GALERIA</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="fans.html">GALERIA</a>
+                        <a class="nav-link" href="fans.html">FANS</a>
                     </li>
 
                 </ul>
@@ -140,12 +140,12 @@
 
 
                     <div class="tour_right">
-                        <div class="tour_button"> 
+                        <div class="tour_button tour_button_1"> 
                             <a href="#" target="blank">Buy Tickets</a>
                         </div>
 
                         <div class="tour_right">
-                            <div class="tour_button"> 
+                            <div class="tour_button tour_button_2"> 
                                 <a href="#" target="blank">Buy Tickets</a>
                             </div>
                         </div>
