--- a/index.html
+++ b/index.html
@@ -88,13 +88,13 @@
 
             <section class="conteiner about">
                 <div class="row">
-                    <article class="col-md-6  col-xs-12">
+                    <article class="col-md-8  col-xs-12">
                         <h1>Sobre la banda</h1>
                         <p class="p_descrip"> <strong>Gorillaz</strong> es una banda virtual británica creada en 1998 por Damon Albarn y Jamie Hewlett. 
                         La banda consiste de cuatro miembros ficticios: 2-D, Noodle, Murdoc Niccals y Russel Hobbs. La mayoría de sus canciones, a la vez que todo su universo ficticio, se presenta a través de vídeos musicales animados, en animación tradicional y animación por computadora, entrevistas y pequeños cortos animados. En la realidad, Albarn es el único miembro músico permanente de la banda. El productor y ejecutivo A&R Remi Kabaka Jr. empezaría a colaborar con la banda en 2016 después de varios años proveyendo la voz de Russel Hobbs y sería nombrado como miembro oficial junto a Albarn y Hewlett en 2019 en el documental de Gorillaz.</p>
                     </article>
 
-                    <article class="col-md-6  col-sm-12">
+                    <article class="col-md-4  col-sm-12">
                         <img src="img/bio.png" alt="IMAGEN DE BIOGRAFIA" class="img-fluid">
                     </article>
                 </div>
@@ -146,7 +146,7 @@
                             </div>
 
                             <div class="col-md-2 col-xs-12">
-                                <button  button type="submit" class="btn">Submit</button>
+                                <button  button type="submit" class="btn">ENVIAR</button>
                             </div>
                         </div>
                 </form>
@@ -154,18 +154,22 @@
             
 
             <div class="conteiner">
-                <div class="row">
+                <div class="row row_iconos">
                     <section class="iconos wow animate__animated animate__pulse"> 
-                        <div class="col-4">
-                            <a href="https://www.gorillaz.com/" target="blank"><img src="img/web.png" alt="icono website"></a>
+                        <div class="col-3">
+                            <a href="https://www.gorillaz.com/" target="blank"><img src="img/web.svg" alt="icono website"></a>
                         </div>
 
-                        <div class=" col-4">
-                            <a href="https://www.instagram.com/gorillaz/?hl=es-la" target="blank"><img src="img/ing.png" alt="icono instagram" ></a>
+                        <div class=" col-3">
+                            <a href="https://www.instagram.com/gorillaz/?hl=es-la" target="blank"><img src="img/ig.svg" alt="icono instagram" ></a>
                         </div>
 
-                        <div class=" col-4">
-                            <a href="https://twitter.com/gorillaz?lang=es" target="blank"><img src="img/tweet.png" alt="icono twitter"></a>
+                        <div class=" col-3">
+                            <a href="https://twitter.com/gorillaz?lang=es" target="blank"><img src="img/twitter.svg" alt="icono twitter"></a>
+                        </div>
+
+                        <div class=" col-3">
+                            <a href="https://www.youtube.com/user/gorillaz" target="blank"><img src="img/youtube.svg" alt="icono youtube"></a>
                         </div>
                     </section>
                 </div>
