--- a/html/albums.html
+++ b/html/albums.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <header>
-                <div class="conteiner banr">
+                <div class="container banr">
                     <div class="row">
                         <section class="col-xs-12 col-md-12  col-sm-12">
                             <img src="../img/banner.gif" alt="Mi BANNER" class="img-fluid">
@@ -21,7 +21,7 @@
                 </div>
     
             <nav>
-                <section class="conteiner">
+                <section class="container">
                     <div class="row">
                         <article class=" art-menu col-md-12  col-xs-12">
                             <ul id="menu">
@@ -127,7 +127,7 @@
             </div>
 
             <div class="reproductor">
-                <div class="conteiner noodle_reproductor">
+                <div class="container noodle_reproductor">
                     <div class="row">
                         <section class="col-xs-12 col-md-12  col-sm-12">
                             <img src="../img/sopt.png" alt="Noodle con cascos" class="img-fluid">
@@ -135,10 +135,10 @@
                     </div>
                 </div>
 
-                <div class="conteiner spoty_reproductor">
+                <div class="container spoty_reproductor">
                     <div class="row">
                         <section class="col-xs-12 col-md-12  col-sm-12"></section>
-                            <section class="spoty"> <iframe src="https://open.spotify.com/embed/artist/3AA28KZvwAUcZuOKwyblJQ" width="403" height="180" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe></section>
+                            <section class="spoty"> <iframe src="https://open.spotify.com/embed/artist/3AA28KZvwAUcZuOKwyblJQ" width="300" height="180" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe></section>
                         </section>
                     </div>
                 </div>
