--- a/html/fans.html
+++ b/html/fans.html
@@ -13,7 +13,7 @@
 
         <header>
 
-            <div class="conteiner banr">
+            <div class="container banr">
                 <div class="row">
                     <section class="col-xs-12 col-md-12  col-sm-12">
                         <img src="../img/banner.gif" alt="Mi BANNER" class="img-fluid">
@@ -22,7 +22,7 @@
             </div>
 
         <nav>
-            <section class="conteiner">
+            <section class="container">
                 <div class="row">
                     <article class=" art-menu col-md-12  col-xs-12">
                         <ul id="menu">
@@ -94,7 +94,7 @@
 
             <section class="fan-art">
 
-                <div class="conteiner fan-art-img">
+                <div class="container fan-art-img">
                     <div class="row">
                         <section class="col-xs-12 col-md-12  col-sm-12">
                             <img src="../img/fan_art.png" alt="FAN ART IMAGEN" class="img-fluid">
