--- a/html/merch.html
+++ b/html/merch.html
@@ -21,7 +21,7 @@
             </div>
 
             <nav>
-                <section class="conteiner">
+                <section class="container">
                     <div class="row">
                         <article class=" art-menu col-md-12  col-xs-12">
                             <ul id="menu">
@@ -84,7 +84,7 @@
 
 
             <section class="slider">
-                <div class="conteiner cont_slider">
+                <div class="container cont_slider">
                     <div class="row">
                         <div id="carouselExampleControls" class="carousel slide col-md-11" data-ride="carousel">
                             <div class="carousel-inner">
@@ -177,15 +177,6 @@
                 
 
             </section>
-
-
-
-
-
-
-
-
-
 
         </main>
 
