--- a/html/tours.html
+++ b/html/tours.html
@@ -14,7 +14,7 @@
     <body>
 
         <header>
-            <div class="conteiner banr">
+            <div class="container banr">
                 <div class="row">
                     <section class="col-xs-12 col-md-12  col-sm-12">
                         <img src="../img/banner.gif" alt="Mi BANNER" class="img-fluid">
@@ -23,7 +23,7 @@
             </div>
 
         <nav>
-            <section class="conteiner">
+            <section class="container">
                 <div class="row">
                     <article class=" art-menu col-md-12  col-xs-12">
                         <ul id="menu">
@@ -51,7 +51,7 @@
                 <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
 
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">HOME <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="../index.html">HOME <span class="sr-only">(current)</span></a>
                     </li>
                     
                     <li class="nav-item">
