--- a/html/fans.html
+++ b/html/fans.html
@@ -109,23 +109,23 @@
                     </div>
 
                     <div>
-                        <img src="../img/art-2.jpg" alt="FAN ART NOODLE" class="img-fluid">
+                        <img src="../img/art-2.jpg" alt="FAN ART Gorillaz" class="img-fluid">
                     </div>
 
                     <div>
-                        <img src="../img/art-3.jpg" alt="FAN ART NOODLE" class="img-fluid">
+                        <img src="../img/art-3.jpg" alt="FAN ART Gorillaz" class="img-fluid">
                     </div>
 
                     <div>
-                        <img src="../img/art-4.jpg" alt="FAN ART NOODLE" class="img-fluid">
+                        <img src="../img/art-4.jpg" alt="FAN ART Gorillaz" class="img-fluid">
                     </div>
 
                     <div>
-                        <img src="../img/art-5.jpg" alt="FAN ART NOODLE" class="img-fluid">
+                        <img src="../img/art-5.jpg" alt="FAN ART Gorillaz" class="img-fluid">
                     </div>
 
                     <div>
-                        <img src="../img/art-6.jpg" alt="FAN ART NOODLE" class="img-fluid">
+                        <img src="../img/art-6.jpg" alt="FAN ART Gorillaz" class="img-fluid">
                     </div>
                 </div>
 
