--- a/html/merch.html
+++ b/html/merch.html
@@ -167,7 +167,7 @@
                     </div>
 
                     <div class="tarjeta_collection">
-                        <img src="../img/merch6.jpg" alt="coleccion">
+                        <img src="../img/merch6.jpg" alt="colecciÓn">
                         <div class="button_new">
                             <a href="#" target="blank">SHOP NOW</a>
                         </div>
