--- a/html/galeria.html
+++ b/html/galeria.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="keywords"  content="gorillaz, gorillaz clint eastwood, gorillaz personajes, gorillaz 2d, gorillaz noodle, gorillaz song machine">
+        <meta name="description" content="Página oficial creada por fans de la banda virtual británica “Gorillaz”. Aquí encontrarás información, fotos, novedades y mucho más.">
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
         <link rel="stylesheet" href="../css/estilos.css">
